Fix robot credential upload

--- a/ansible/roles/robot/tasks/upload-robot-creds.yaml
+++ b/ansible/roles/robot/tasks/upload-robot-creds.yaml
@@ -7,10 +7,11 @@
 
 - name: Upload kubeconfig to hub-controller
   ansible.builtin.uri:
-    url: "{{ hub_controller_url | default(lookup('env', 'RCS_HUBCONTROLLER_URL'), true) }}/control/setRobotCreds"
+    url: "{{ lookup('env', 'RCS_HUBCONTROLLER_URL')}}control/setRobotCreds"
     method: POST
-    user: "{{ hub_controller_user | default(lookup('env', 'RCS_HUBCONTROLLER_USER') | default('admin', true), true) }}"
-    password: "{{ hub_controller_password | default(lookup('env', 'RCS_HUBCONTROLLER_PASSWORD') | default('admin', true), true) }}"
+    url_username: "{{ lookup('env', 'RCS_HUBCONTROLLER_USER') }}"
+    url_password: "{{ lookup('env', 'RCS_HUBCONTROLLER_PASSWORD') }}"
+    force_basic_auth: yes
     headers:
       Accept: text/plain
       Content-Type: application/x-www-form-urlencoded
